🔧 atualizando informações do autor

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ title: gilmar sales
     <img class="portrait" src="https://avatars.githubusercontent.com/u/7975964"/>
   </div>
   <div>
-    <h1>Gilmar Sales</h1>
-    <p>Estudante de Ciência da Computação</p>
+    <h1>{{ site.author.name }}</h1>
+    <p>{{ site.author.description }}</p>
   </div>
 </div>
 
