--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 title: gilmar sales
 ---
 
-<div style="display: flex;">
+<div class="profile-container">
   <div class="profile">
     <img class="bubble" src="{{ site.baseurl }}/images/bubble.svg"/>
     <img class="portrait" src="https://avatars.githubusercontent.com/u/7975964"/>
